--- a/public/.htaccess
+++ b/public/.htaccess
@@ -3,11 +3,13 @@
 # Redirect all requests to index.php
 RewriteEngine On
 
-# Handle API requests
+# Handle API requests - to'g'ridan-to'g'ri api.php ga yo'naltirish
+RewriteRule ^api\.php$ api.php [L]
+
+# Handle API requests with parameters
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_URI} ^/api/
-RewriteRule ^api/(.*)$ api.php [QSA,L]
+RewriteRule ^api\.php\?(.*)$ api.php?$1 [QSA,L]
 
 # Block MadelineProto web interface requests
 RewriteCond %{REQUEST_URI} ^/.*\.session
