Restore Telegram functionality with enhanced web interface protection - Re-enable MadelineProto initialization - Add webEcho blocking in .htaccess - Restore disableWebInterface method - Fix authenticate method with MadelineProto start - Comprehensive web interface blocking for MadelineProto 8.0

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -24,7 +24,7 @@ RewriteCond %{REQUEST_URI} ^/.*\.web\.(php|html)
 RewriteRule .* - [F,L]
 
 # Block MadelineProto web interface completely
-RewriteCond %{REQUEST_URI} ^/.*(web|qr|login|waitQrCodeOrLogin|getQrCode)
+RewriteCond %{REQUEST_URI} ^/.*(web|qr|login|waitQrCodeOrLogin|getQrCode|webEcho)
 RewriteRule .* - [F,L]
 
 # Block any MadelineProto related requests
